<resources>
    <string name="app_name">FOODpedia</string>
    <string name="app_site">foodpedia.tk</string>

    <string name="label_find_product">Найти товар</string>
    <string name="label_product">Товар</string>
    <string name="label_scanner">Сканер</string>
    <string name="label_history">История</string>
    <string name="label_settings">Настройки</string>
    <string name="label_help">Справка</string>
    <string name="label_per_100_g">В 100 г. продукта:</string>
    <string name="label_no_description">Описание товара отсутствует</string>
    <string name="label_scan_hint">Просканируйте штрихкод или введите код товара вручную</string>
    <string name="label_manual_input">Ручной ввод</string>
    <string name="label_product_code">Код товара</string>
    <string name="label_product_code_tip">Введите 8 или 13 цифр</string>
    <string name="label_search">Поиск</string>

    <string name="format_mass">Масса: %s</string>
    <string name="format_proteins">белки - %s г</string>
    <string name="format_fat">жиры - %s г</string>
    <string name="format_carbohydrates">углеводы - %s г</string>
    <string name="format_energy">энерг. - %s ккал</string>
    <string name="format_additives">Добавки: %s</string>
    <string name="format_ingredients">Состав: %s</string>
    <string name="format_ean">Код товара: %s</string>

    <string name="error_failed_to_open_camera">Не удаётся запустить камеру</string>
    <string name="error_failed_to_start_preview">Не удаётся начать предпросмотр изображения с камеры</string>
    <string name="error_failed_to_load_data">Ошибка при загрузке данных</string>
    <string name="error_failed_to_parse_data">Не удаётся отобразить информацию о выбранном товаре</string>
    <string name="error_no_product_information">Нет информации о запрашиваемом товаре</string>
    <string name="error_no_network_connection">Нет подключения к сети</string>
    <string name="error_product_code_for_internal_use">Коды товаров, начинающиеся на 2, предназначены для внутреннего использования магазинами</string>
    <string name="error_product_code_invalid">Код товара должен содержать 8 или 13 цифр</string>
</resources>
