<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product_white_36dp"
            android:title="@string/label_product"/>
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_scanner_white_36dp"
            android:title="@string/label_scanner"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_white_36dp"
            android:title="@string/label_history"/>
    </group>

    <group
        android:id="@+id/nav_second_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_36dp"
            android:title="@string/label_settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_white_36dp"
            android:title="@string/label_help"/>
    </group>

</menu>
